@@ -61,6 +61,7 @@ gnulib_tool_options=$gnulib_tool_options"
         --avoid=dummy
         --libtool
         --macro-prefix=GL
+        --with-tests --tests-base=gnulib-tests
 "
 
 # gnulib modules used by this package.
